--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,25 @@
-/* You can add global styles to this file, and also import other style files */
+* {
+  margin: 0px 0px;
+  padding: 0px 0px;
+  font-family: "Andada Pro", serif;
+}
+
+/* Scrollbar: */
+body::-webkit-scrollbar {
+  width: 17px;
+}
+
+body::-webkit-scrollbar-track {
+  background: rgb(185, 185, 185);
+  box-shadow: 3px 3px 3px rgba(0, 0, 0, 1) inset;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: rgb(114, 0, 0);
+  border-radius: 20px;
+  border: 2px solid black;
+}
+
+body::-webkit-scrollbar-thumb:hover {
+  background-color: rgb(129, 29, 29);
+}
