--- a/src/app/product-card/product-card.component.css
+++ b/src/app/product-card/product-card.component.css
@@ -1,9 +1,9 @@
 .card {
   background-color: rgb(44, 44, 44);
-  width: 25%;
+  width: 90%;
   height: 650px;
   flex-basis: 21%;
-  margin: 2%;
+  margin: 5%;
 }
 
 .card:hover {
@@ -54,7 +54,7 @@
   cursor: pointer;
 }
 
-.buy {
+.added {
   background: white;
   color: black;
   border: 1px solid rgb(77, 7, 7);
