--- a/src/app/product-card/product-card.component.html
+++ b/src/app/product-card/product-card.component.html
@@ -10,7 +10,9 @@
     </div>
     <div class="buttons-container">
       <button class="buy-button buy-now">Buy Now</button>
-      <button class="buy-button add-to-cart">Add to Cart</button>
+      <button class="buy-button add-to-cart" (click)="addToCart()">
+        Add to Cart
+      </button>
     </div>
   </div>
 </div>
