--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,2 +1,35 @@
 <!-- TODO: Add other cards! -->
-<app-product-card [productCard]="productList[0]"></app-product-card>
+<div class="cards-container">
+  <app-product-card
+    [productCard]="productList[0]"
+    (addedToCart)="addToCart($event)"
+  ></app-product-card>
+  <app-product-card
+    [productCard]="productList[1]"
+    (addedToCart)="addToCart($event)"
+  ></app-product-card>
+  <app-product-card
+    [productCard]="productList[2]"
+    (addedToCart)="addToCart($event)"
+  ></app-product-card>
+  <app-product-card
+    [productCard]="productList[3]"
+    (addedToCart)="addToCart($event)"
+  ></app-product-card>
+  <app-product-card
+    [productCard]="productList[4]"
+    (addedToCart)="addToCart($event)"
+  ></app-product-card>
+  <app-product-card
+    [productCard]="productList[5]"
+    (addedToCart)="addToCart($event)"
+  ></app-product-card>
+  <app-product-card
+    [productCard]="productList[6]"
+    (addedToCart)="addToCart($event)"
+  ></app-product-card>
+  <app-product-card
+    [productCard]="productList[7]"
+    (addedToCart)="addToCart($event)"
+  ></app-product-card>
+</div>
