only cart is left to add

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <!-- TODO: Add all components' selectors(tags)! -->
+<!-- TODO: Add cart -->
 <app-header></app-header>
 <app-intro></app-intro>
 <app-product-section></app-product-section>
+<app-footer></app-footer>
