--- a/src/app/product-card/product-card.component.html
+++ b/src/app/product-card/product-card.component.html
@@ -10,8 +10,13 @@
     </div>
     <div class="buttons-container">
       <button class="buy-button buy-now">Buy Now</button>
-      <button class="buy-button add-to-cart" (click)="addToCart()">
-        Add to Cart
+      <button
+        type="button"
+        class="buy-button add-to-cart"
+        (click)="addToCart()"
+        [ngClass]="{ added: flag }"
+      >
+        {{ buttonTitle }}
       </button>
     </div>
   </div>
