fixes after examination

--- a/src/app/product-card/product-card.component.html
+++ b/src/app/product-card/product-card.component.html
@@ -14,7 +14,7 @@
         type="button"
         class="buy-button add-to-cart"
         (click)="addToCart()"
-        [ngClass]="{ added: flag }"
+        [ngClass]="{ added: IsProductInCart }"
       >
         {{ buttonTitle }}
       </button>
