--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,1 @@
-<!-- TODO: Add all components' selectors(tags)! -->
-<!-- TODO: Add cart -->
-<app-header></app-header>
-<app-intro></app-intro>
-<app-product-section></app-product-section>
-<app-footer></app-footer>
+<router-outlet></router-outlet>
