--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,5 @@
-<!-- TODO: Add link to the cart!-->
-<a name="to-the-top"></a>
-
 <header>
+  <a name="to-the-top"></a>
   <div class="header" id="header">
     <div>
       <img
@@ -23,9 +21,9 @@
 
     <nav>
       <ul class="header-nav">
-        <a href="#" title="Home">Home</a>
+        <a routerLink="/home" title="Home">Home</a>
         <a href="#" title="Catalog">Catalog</a>
-        <a href="#" class="pop-up-open" title="Cart">Cart</a>
+        <a routerLink="/cart" class="pop-up-open" title="Cart">Cart</a>
         <a href="#" title="Profile">Profile</a>
       </ul>
     </nav>
