--- a/src/app/product-card/product-card.component.css
+++ b/src/app/product-card/product-card.component.css
@@ -43,9 +43,9 @@
   background-color: black;
   color: white;
   border: 1px solid white;
-  margin: 10px 10px;
+  margin: 5px;
   font-size: 17px;
-  width: 43%;
+  width: 30%;
   font-weight: bold;
 }
 
@@ -58,4 +58,5 @@
   background: white;
   color: black;
   border: 1px solid rgb(77, 7, 7);
+  cursor: default;
 }
